{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 22,
  "lineage": "249782b0-1c2b-709e-d1f2-44891287f491",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525454622755:internet-gateway/igw-01b26d356f07bb72d",
            "id": "igw-01b26d356f07bb72d",
            "owner_id": "525454622755",
            "tags": {
              "Name": "eks-landmark"
            },
            "tags_all": {
              "Name": "eks-landmark"
            },
            "vpc_id": "vpc-05bf587b9a3b6a531"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525454622755:route-table/rtb-0e97658f8bf7799bf",
            "id": "rtb-0e97658f8bf7799bf",
            "owner_id": "525454622755",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b26d356f07bb72d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05bf587b9a3b6a531"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098fe03c8ac2d81aa",
            "route_table_id": "rtb-0e97658f8bf7799bf",
            "subnet_id": "subnet-064a8fd25da5c3286"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea591d54c9362ccf",
            "route_table_id": "rtb-0e97658f8bf7799bf",
            "subnet_id": "subnet-051959a7c232fbe24"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525454622755:security-group/sg-094d4578fbd817d02",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094d4578fbd817d02",
            "ingress": [],
            "name": "eks-landmark",
            "name_prefix": "",
            "owner_id": "525454622755",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-landmark"
            },
            "tags_all": {
              "Name": "eks-landmark"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bf587b9a3b6a531"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "73.128.39.39/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1207294777",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-094d4578fbd817d02",
            "security_group_rule_id": "sgr-06a1c3f57ad8739ab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.demo",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525454622755:subnet/subnet-064a8fd25da5c3286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064a8fd25da5c3286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "525454622755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-landmark-node",
              "kubernetes.io/cluster/eks-landmark": "shared"
            },
            "tags_all": {
              "Name": "eks-landmark-node",
              "kubernetes.io/cluster/eks-landmark": "shared"
            },
            "vpc_id": "vpc-05bf587b9a3b6a531"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525454622755:subnet/subnet-051959a7c232fbe24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051959a7c232fbe24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "525454622755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-landmark-node",
              "kubernetes.io/cluster/eks-landmark": "shared"
            },
            "tags_all": {
              "Name": "eks-landmark-node",
              "kubernetes.io/cluster/eks-landmark": "shared"
            },
            "vpc_id": "vpc-05bf587b9a3b6a531"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525454622755:vpc/vpc-05bf587b9a3b6a531",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0983ddadd0d3dae04",
            "default_route_table_id": "rtb-08e4b985d5da8bff0",
            "default_security_group_id": "sg-0e04e61ce29787132",
            "dhcp_options_id": "dopt-0da52bc6f5cf218db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05bf587b9a3b6a531",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e4b985d5da8bff0",
            "owner_id": "525454622755",
            "tags": {
              "Name": "eks-landmark-node",
              "kubernetes.io/cluster/eks-landmark": "shared"
            },
            "tags_all": {
              "Name": "eks-landmark-node",
              "kubernetes.io/cluster/eks-landmark": "shared"
            }
          }
        }
      ]
    }
  ]
}